Advance Enhancement Done~

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">P08 - Google Map</string>
+
+    <string-array name="location">
+        <item>Select an option</item>
+        <item>North</item>
+        <item>Central</item>
+        <item>East</item>
+    </string-array>
 </resources>
